# fks_data

./: .dockerignore  .gitmodules  Dockerfile  Dockerfile.legacy  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  sitecustomize.py
.github/scripts/: check_legacy_imports.py  coverage_check.py
.github/workflows/: ci.yml  docker-build-push.yml  fks_data-ci.yml  tests.yml
.github/workflows.backup.20251119_001135/: tests.yml
data/: active_assets.db
docs/: DATA_FETCH_TEST_RESULTS.md  FKS_DATA_ARCHITECTURE.md  MASSIVE_FUTURES.md  MASSIVE_FUTURES_API_TEST_RESULTS.md
k8s/: health-checks.yaml
migrations/: 001_init_ohlcv.sql
scripts/: check_data_gaps.py  init_database.sh  init_schema.py  install_shared_editable.sh  monitor_collection.py  run_migrations.py  test_shared_integration.py  verify_imports.py
shared/shared_schema/: market_bar.schema.json
src/: __init__.py  active_assets.py  app.py  app_logging.py  bars.py  celery_app.py  config.py  exceptions.py  logging.py  main.py  main_fastapi.py  manager.py  market_types.py  splitting.py  store.py  test_phase1.py  types.py  validate_timescaledb.py  validation.py
src/adapters/: __init__.py  alpha_vantage.py  base.py  binance.py  binance_ws.py  cmc.py  coingecko.py  eodhd.py  finnhub.py  massive_futures.py  massive_futures_ws.py  multi_provider_manager.py  newsapi.py  pandas_datareader.py  polygon.py  tiingo.py
src/collectors/: __init__.py  forex_collector.py  fundamentals_collector.py
src/data/: test_rithmic.db
src/database/: __init__.py  connection.py
src/fks_data/: __init__.py  active_assets.py  bars.py  main.py  manager.py  splitting.py  store.py
src/metrics/: __init__.py  quality_collector.py  quality_metrics.py
src/models/: __init__.py  candle.py  market.py  schemas.py  tick.py
src/pipelines/: __init__.py  builder.py  etl.py  executor.py
src/processors/: __init__.py  delta_scanner.py
src/providers/: __init__.py  alpha.py  binance.py  cmc.py  futures_beta.py  polygon.py  polygon_flatfiles.py  rithmic.py  yfin.py
src/tasks/: __init__.py  collect_batch.py  collect_data.py
src/tests/: test_adapter_eodhd.py  test_adapter_polygon.py  test_adapter_retries.py  test_adapters_binance.py  test_adapters_errors.py  test_bars_conversion.py  test_database_connection.py  (+10 more)
tests/: test_adapter_polygon.py  test_import.py  test_schema_market_bar.py  test_schema_validation_integration.py  test_shared_import.py
(+98 files in other folders)
