[project]
name = "data-service"
version = "0.1.0"
description = "FKS Data Service (flat src layout)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "nuniesmith" }]

dependencies = [
  "pandas>=2.3.2",
  "numpy>=2.3.2",
  "sqlalchemy>=2.0.43",
  "aiofiles>=24.1.0",
  "psycopg2-binary>=2.9.10",
  "requests>=2.32.5",
  "yfinance>=0.2.65",
  "polygon-api-client>=1.15.3",
  "alpha-vantage>=3.0.0",
  "binance-python>=0.2.9",
  "flask>=3.1.2",
  "cryptography>=45.0.7",
  "pytz",
  "pydantic>=2.11.7"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy", "coverage"]

[project.scripts]
data = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
